@@ -11,6 +11,7 @@
  * Fixed possible file corruptions when saving ASF files.
  * Fixed updating the comment field of Vorbis comments.
  * Added BUILD_BINDINGS build option.
+ * Added ENABLE_CCACHE build option.
  * Marked ByteVector::null and ByteVector::isNull() deprecated.
  * Marked String::null and ByteVector::isNull() deprecated.
  * Marked XiphComment::removeField() deprecated.
